Bug 522043 - Prefer to use valueOf to create Number instances
Change-Id: I5d0dd49bdc88dce7a1ec480f7ef0c94632e3b749
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>