@@ -32,7 +32,7 @@ public class StringToShortConverterTest extends TestCase {
 	}
 
 	public void testConvertsToShort() throws Exception {
-		Short value = new Short((short) 1);
+		Short value = Short.valueOf((short) 1);
 		Short result = (Short) converter.convert(numberFormat.format(value));
 
 		assertEquals(value, result);
@@ -40,7 +40,7 @@ public class StringToShortConverterTest extends TestCase {
 
 	public void testConvertsToShortPrimitive() throws Exception {
 		converter = StringToShortConverter.toShort(numberFormat, true);
-		Short value = new Short((short) 1);
+		Short value = Short.valueOf((short) 1);
 		Short result = (Short) converter.convert(numberFormat.format(value));
 		assertEquals(value, result);
 	}
