@@ -167,25 +167,25 @@ public class Mocks {
 							: Boolean.FALSE;
 				} else if (returnType == byte.class) {
 					result = (returnValue != null) ? (Byte) returnValue
-							: new Byte((byte) 0);
+							: Byte.valueOf((byte) 0);
 				} else if (returnType == char.class) {
 					result = (returnValue != null) ? (Character) returnValue
-							: new Character((char) 0);
+							: Character.valueOf((char) 0);
 				} else if (returnType == short.class) {
 					result = (returnValue != null) ? (Short) returnValue
-							: new Short((short) 0);
+							: Short.valueOf((short) 0);
 				} else if (returnType == int.class) {
 					result = (returnValue != null) ? (Integer) returnValue
 							: Integer.valueOf(0);
 				} else if (returnType == long.class) {
 					result = (returnValue != null) ? (Long) returnValue
-							: new Long(0);
+							: Long.valueOf(0);
 				} else if (returnType == float.class) {
 					result = (returnValue != null) ? (Float) returnValue
-							: new Float(0);
+							: Float.valueOf(0);
 				} else if (returnType == double.class) {
 					result = (returnValue != null) ? (Double) returnValue
-							: new Double(0);
+							: Double.valueOf(0);
 				}
 
 				return result;
